--- a/jquery/jqueryTutorialStyle.css
+++ b/jquery/jqueryTutorialStyle.css
@@ -1,8 +1,11 @@
 body {
-  color: rgb(200, 200, 255);
+  color: rgb(175, 225, 250);
   background-color: rgb(0, 10, 50);
   font-family: "Quicksand", sans-serif;
 }
 .code {
   font-family: "Source Code Pro", monospace;
+  border-color: rgb(175, 225, 250);
+  border-weight: 5px;
+  border-radius: 10px;
 }
