--- a/jquery/jqueryTutorialStyle.css
+++ b/jquery/jqueryTutorialStyle.css
@@ -4,10 +4,12 @@ body {
   font-family: "Quicksand", sans-serif;
 }
 .code {
+  color: rgb(175, 225, 250);
+  background-color: rgb(0, 10, 50);
   font-family: "Source Code Pro", monospace;
   border-color: rgb(175, 225, 250);
   border-weight: 5px;
   border-radius: 10px;
-  width: 50%;
+  width: 500px;
   height: 500px;
 }
