--- a/jquery/jqueryTutorialStyle.css
+++ b/jquery/jqueryTutorialStyle.css
@@ -8,7 +8,7 @@ body {
   background-color: rgb(0, 10, 50);
   font-family: "Source Code Pro", monospace;
   border-color: rgb(175, 225, 250);
-  border-weight: 5px;
+  border-width: 5px;
   border-radius: 10px;
   width: 500px;
   height: 500px;
