--- a/jquery/jqueryTutorialStyle.css
+++ b/jquery/jqueryTutorialStyle.css
@@ -7,9 +7,8 @@ body {
   color: rgb(175, 225, 250);
   background-color: rgb(0, 10, 50);
   font-family: "Source Code Pro", monospace;
-  border-color: rgb(175, 225, 250);
-  border-width: 5px;
-  border-radius: 10px;
+  border: solid 10px rgb(175, 225, 250);
+  border-radius: 25px;
   width: 500px;
   height: 500px;
 }
